// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/threading/channel_threads/thread_footer should match snapshot when a single message is followed 1`] = `
<body>
  <div>
    <div
      class="ThreadFooter"
    >
      <div
        class="indicator"
      />
      <button
        class="separated"
        data-testid="mock-follow-button"
      >
        Follow
      </button>
    </div>
  </div>
</body>
`;

exports[`components/threading/channel_threads/thread_footer should report total number of replies 1`] = `
<body>
  <div>
    <div
      class="ThreadFooter"
    >
      <div
        class="indicator"
      />
      <div
        data-testid="mock-avatars"
      />
      <button
        class="Button Button___transparent ReplyButton separated"
      >
        <span
          class="Button_prepended"
        >
          <span
            class="icon"
          >
            <i
              class="icon-reply-outline"
            />
          </span>
        </span>
        <span
          class="Button_label"
        >
          9 replies
        </span>
      </button>
      <button
        class="separated"
        data-testid="mock-follow-button"
      >
        Follow
      </button>
      <span
        data-testid="mock-timestamp"
      />
    </div>
  </div>
</body>
`;

exports[`components/threading/channel_threads/thread_footer should show unread indicator 1`] = `
<body>
  <div>
    <div
      class="ThreadFooter"
    >
      <div
        class="indicator"
        tabindex="0"
      >
        <div
          class="dot-unreads"
        />
      </div>
      <div
        data-testid="mock-avatars"
      />
      <button
        class="Button Button___transparent ReplyButton separated"
      >
        <span
          class="Button_prepended"
        >
          <span
            class="icon"
          >
            <i
              class="icon-reply-outline"
            />
          </span>
        </span>
        <span
          class="Button_label"
        >
          9 replies
        </span>
      </button>
      <button
        class="separated"
        data-testid="mock-follow-button"
      >
        Follow
      </button>
      <span
        data-testid="mock-timestamp"
      />
    </div>
  </div>
</body>
`;
